--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,88 +3,113 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
-
+    android:orientation="vertical">
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_weight="1"
-        tools:context="com.mahesaiqbal.scoreboard.MainActivity">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="1"
+            tools:context="com.mahesaiqbal.scoreboard.MainActivity">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Team A"
-            android:padding="4dp"
-            android:gravity="center_horizontal"/>
-        <TextView
-            android:id="@+id/team_a_score"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:padding="4dp"
-            android:gravity="center_horizontal"/>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="+3 Points"
-            android:layout_margin="8dp"
-            android:onClick="addThreeForTeamA"/>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="+2 Points"
-            android:layout_margin="8dp"
-            android:onClick="addTwoForTeamA"/>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Free Throw"
-            android:layout_margin="8dp"
-            android:onClick="addOneForTeamA"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Team A"
+                android:padding="4dp"
+                android:gravity="center_horizontal"/>
+            <TextView
+                android:id="@+id/team_a_score"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:padding="4dp"
+                android:gravity="center_horizontal"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="+3 Points"
+                android:textColor="@android:color/white"
+                android:background="@color/colorPrimary"
+                android:layout_margin="8dp"
+                android:onClick="addThreeForTeamA" />
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="+2 Points"
+                android:textColor="@android:color/white"
+                android:background="@color/colorPrimary"
+                android:layout_margin="8dp"
+                android:onClick="addTwoForTeamA"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Free Throw"
+                android:textColor="@android:color/white"
+                android:background="@color/colorPrimary"
+                android:layout_margin="8dp"
+                android:onClick="addOneForTeamA"/>
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="1"
+            tools:context="com.mahesaiqbal.scoreboard.MainActivity">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Team B"
+                android:padding="4dp"
+                android:gravity="center_horizontal"/>
+            <TextView
+                android:id="@+id/team_b_score"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:padding="4dp"
+                android:gravity="center_horizontal"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="+3 Points"
+                android:textColor="@android:color/white"
+                android:background="@color/colorPrimary"
+                android:layout_margin="8dp"
+                android:onClick="addThreeForTeamB"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="+2 Points"
+                android:textColor="@android:color/white"
+                android:background="@color/colorPrimary"
+                android:layout_margin="8dp"
+                android:onClick="addTwoForTeamB"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Free Throw"
+                android:textColor="@android:color/white"
+                android:background="@color/colorPrimary"
+                android:layout_margin="8dp"
+                android:onClick="addOneForTeamB"/>
+
+        </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_weight="1"
-        tools:context="com.mahesaiqbal.scoreboard.MainActivity">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Team B"
-            android:padding="4dp"
-            android:gravity="center_horizontal"/>
-        <TextView
-            android:id="@+id/team_b_score"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:padding="4dp"
-            android:gravity="center_horizontal"/>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="+3 Points"
-            android:layout_margin="8dp"
-            android:onClick="addThreeForTeamB"/>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="+2 Points"
-            android:layout_margin="8dp"
-            android:onClick="addTwoForTeamB"/>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Free Throw"
-            android:layout_margin="8dp"
-            android:onClick="addOneForTeamB"/>
-
-    </LinearLayout>
+    <Button
+        android:id="@+id/reset_score"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Reset"
+        android:textColor="@android:color/white"
+        android:background="@color/colorPrimary"
+        android:onClick="resetScore" />
 
 </LinearLayout>
